# z-units

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
tests/: test_convert.py  test_nonlinear_convertion.py  test_quantity.py  test_unit.py
z_unit/: __init__.py  environment.py  quantity.py  unit.py  unit_registry.py  util.py
z_units/: __init__.py  config.py  constant.py  environment.py  quantity.py  unit.py  unit_registry.py  util.py
zunits/: config.py  quantity.py  unit.py  unit_registry.py
