
[project]
name = "z-units"
version = "0.2.1"
description = "A simple unit converter for chemical engineers"
authors = [
    {name = "zenius", email = "zenius@outlook.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
"Homepage" = "https://github.com/zxzenius/z-units"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.4.4",
    "ruff>=0.15.5",
]
